--- a/bootstrap-app.yaml
+++ b/bootstrap-app.yaml
@@ -1,1 +1,18 @@
-
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: bootstrap-student-9
+  namespace: argocd
+spec:
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: student-9
+  project: default
+  source:
+    repoURL: https://github.com/ElmelundJC/argoCD_training.git
+    targetRevision: HEAD
+    path: apps
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
